@@ -1,3 +1,10 @@
+2007-09-28  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
+		- (nma_menu_vpn_item_clicked, nma_menu_disconnect_vpn_item_activate,
+		   nma_menu_add_vpn_submenu): for now, preserve old behavior of only
+			one active VPN connection at a time.  Will be fixed later.
+
 2007-09-27  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet-dbus-settings.c
